refactor: Separator 클래스, Arrays.asList()를 List.of()로 변경